--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <p class="text-xl md:text-2xl mb-8 text-gray-600">Serving Washington families with honest, transparent, and personalized mortgage solutions.</p>
                 <div class="flex flex-col sm:flex-row gap-4 justify-center">
                     <button class="bg-brand-green text-white px-8 py-3 rounded-lg font-semibold hover:opacity-90 transition duration-300">
-                        Start Your Application
+                        Start My Application
                     </button>
                     <button class="bg-transparent border-2 border-brand-blue text-brand-blue px-8 py-3 rounded-lg font-semibold hover:bg-brand-blue hover:text-white transition duration-300">
                         Schedule a Free Consultation
@@ -140,7 +140,7 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
             <h2 class="text-3xl md:text-4xl font-bold text-white mb-8">Ready to See How Much You Can Afford?</h2>
             <button class="bg-brand-green text-white px-8 py-3 rounded-lg font-semibold hover:opacity-90 transition duration-300 text-lg">
-                Start my Application
+                Start My Application
             </button>
         </div>
     </section>
