--- a/index.html
+++ b/index.html
@@ -139,9 +139,9 @@
     <section class="bg-brand-blue py-16">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
             <h2 class="text-3xl md:text-4xl font-bold text-white mb-8">Ready to See How Much You Can Afford?</h2>
-            <button class="bg-brand-green text-white px-8 py-3 rounded-lg font-semibold hover:opacity-90 transition duration-300 text-lg">
+            <a href="https://hrl.my1003app.com/2751125/register?time=1759193910399" target="_blank" rel="noopener noreferrer" class="inline-block bg-brand-green text-white px-8 py-3 rounded-lg font-semibold hover:opacity-90 transition duration-300 text-lg">
                 Start My Application
-            </button>
+            </a>
         </div>
     </section>
 
@@ -160,6 +160,11 @@
                         <label class="block text-gray-700 font-semibold mb-2" for="email">Email</label>
                         <input class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-brand-green" 
                                type="email" id="email" placeholder="your@email.com">
+                    </div>
+                    <div class="mb-4">
+                        <label class="block text-gray-700 font-semibold mb-2" for="phone">Phone</label>
+                        <input class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-brand-green" 
+                               type="tel" id="phone" placeholder="(123) 456-7890">
                     </div>
                     <div class="mb-4">
                         <label class="block text-gray-700 font-semibold mb-2" for="message">Message</label>
@@ -185,23 +190,27 @@
                         <i class="fa-solid fa-phone"></i>
                         <a href="tel:+12063901216" class="hover:text-brand-green transition duration-300">(206) 390-1216</a>
                     </p>
-                    <p class="text-gray-300">
+                    <p class="text-gray-300 mb-1">
                         <i class="fa-solid fa-envelope"></i>
                         <a href="mailto:deandre@myhomeright.com" class="hover:text-brand-green transition duration-300">deandre@myhomeright.com</a>
+                    </p>
+                    <p class="text-gray-300">
+                        <i class="fa-solid fa-building-columns"></i>
+                        NMLS #2751125
                     </p>
                 </div>
                 <!-- Social Media Icons -->
                 <div class="flex justify-center space-x-6 mb-6">
-                    <a href="#" target="_blank" rel="noopener noreferrer" class="text-white hover:text-brand-green transition duration-300">
+                    <a href="https://www.youtube.com/@loansbydc" target="_blank" rel="noopener noreferrer" class="text-white hover:text-brand-green transition duration-300">
                         <i class="fa-brands fa-youtube text-3xl"></i>
                     </a>
-                    <a href="#" target="_blank" rel="noopener noreferrer" class="text-white hover:text-brand-green transition duration-300">
+                    <a href="https://www.facebook.com/LoansbyDC" target="_blank" rel="noopener noreferrer" class="text-white hover:text-brand-green transition duration-300">
                         <i class="fa-brands fa-facebook text-3xl"></i>
                     </a>
-                    <a href="#" target="_blank" rel="noopener noreferrer" class="text-white hover:text-brand-green transition duration-300">
+                    <a href="https://www.tiktok.com/@loansbydc" target="_blank" rel="noopener noreferrer" class="text-white hover:text-brand-green transition duration-300">
                         <i class="fa-brands fa-tiktok text-3xl"></i>
                     </a>
-                    <a href="#" target="_blank" rel="noopener noreferrer" class="text-white hover:text-brand-green transition duration-300">
+                    <a href="https://www.instagram.com/loans.by.dc/" target="_blank" rel="noopener noreferrer" class="text-white hover:text-brand-green transition duration-300">
                         <i class="fa-brands fa-instagram text-3xl"></i>
                     </a>
                 </div>
