--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
             }
         }
     </script>
+    <style>
+        html {
+            scroll-behavior: smooth;
+        }
+    </style>
 </head>
 <body class="bg-gray-50">
     <!-- Navigation -->
@@ -28,9 +33,10 @@
                     <img src="images/logo.svg" alt="Loans by DC Logo" class="h-16 py-2">
                 </div>
                 <div class="flex items-center space-x-4">
-                    <a href="#services" class="text-gray-700 hover:text-brand-green px-3 py-2 rounded-md text-base font-medium">Services</a>
-                    <a href="#about" class="text-gray-700 hover:text-brand-green px-3 py-2 rounded-md text-base font-medium">About</a>
-                    <a href="#contact" class="text-gray-700 hover:text-brand-green px-3 py-2 rounded-md text-base font-medium">Contact</a>
+                    <a href="#about" class="hidden md:block text-gray-700 hover:text-brand-green px-3 py-2 rounded-md text-base font-medium">About</a>
+                    <a href="#programs" class="hidden md:block text-gray-700 hover:text-brand-green px-3 py-2 rounded-md text-base font-medium">Programs</a>
+                    <a href="#contact" class="hidden md:block text-gray-700 hover:text-brand-green px-3 py-2 rounded-md text-base font-medium">Contact</a>
+                    <a href="https://hrl.my1003app.com/2751125/register?time=1759193910399" target="_blank" rel="noopener noreferrer" class="bg-brand-blue text-white px-6 py-2 rounded-md text-base font-semibold hover:opacity-90 transition duration-300">Apply</a>
                 </div>
             </div>
         </div>
@@ -78,7 +84,7 @@
     </section>
 
     <!-- Mortgage Products Section -->
-    <section class="py-16 bg-gray-50">
+    <section id="programs" class="py-16 bg-gray-50">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="text-center mb-12">
                 <h2 class="text-3xl md:text-4xl font-bold text-gray-800 mb-4">Mortgage Products & Programs We Work With</h2>
