Add external links

--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
                 <h2 class="text-4xl md:text-6xl font-bold mb-6 text-gray-800">Your Path to Homeownership Starts Here</h2>
                 <p class="text-xl md:text-2xl mb-8 text-gray-600">Serving Washington families with honest, transparent, and personalized mortgage solutions.</p>
                 <div class="flex flex-col sm:flex-row gap-4 justify-center">
-                    <button class="bg-brand-green text-white px-8 py-3 rounded-lg font-semibold hover:opacity-90 transition duration-300">
+                    <a href="https://hrl.my1003app.com/2751125/register?time=1759193910399" target="_blank" rel="noopener noreferrer" class="bg-brand-green text-white px-8 py-3 rounded-lg font-semibold hover:opacity-90 transition duration-300">
                         Start My Application
-                    </button>
-                    <button class="bg-transparent border-2 border-brand-blue text-brand-blue px-8 py-3 rounded-lg font-semibold hover:bg-brand-blue hover:text-white transition duration-300">
+                    </a>
+                    <a href="https://calendar.google.com/calendar/u/0/appointments/schedules/AcZssZ07Pu7r-vv6J1puw92PvEMB17a_NqGi9mOqkF7M7NWdVbpvrzosT9i0AtslYNshZtgwPuCJyXO-" target="_blank" rel="noopener noreferrer" class="bg-transparent border-2 border-brand-blue text-brand-blue px-8 py-3 rounded-lg font-semibold hover:bg-brand-blue hover:text-white transition duration-300">
                         Schedule a Free Consultation
-                    </button>
+                    </a>
                 </div>
             </div>
         </div>
@@ -156,28 +156,28 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <h2 class="text-3xl font-bold text-center text-gray-800 mb-12">Get In Touch</h2>
             <div class="max-w-2xl mx-auto">
-                <form class="bg-white p-8 rounded-lg shadow-md">
+                <form action="https://docs.google.com/forms/d/e/1FAIpQLSc2wrjv1q6P3PnJcQHwj6uhu5cpY_X1gLxPBz2_uukZ1rzRLg/formResponse" method="POST" target="_blank" class="bg-white p-8 rounded-lg shadow-md">
                     <div class="mb-4">
                         <label class="block text-gray-700 font-semibold mb-2" for="name">Name</label>
                         <input class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-brand-green" 
-                               type="text" id="name" placeholder="Your name">
+                               type="text" id="name" name="entry.1938824087" placeholder="Your name" required>
                     </div>
                     <div class="mb-4">
                         <label class="block text-gray-700 font-semibold mb-2" for="email">Email</label>
                         <input class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-brand-green" 
-                               type="email" id="email" placeholder="your@email.com">
+                               type="email" id="email" name="entry.178332333" placeholder="your@email.com" required>
                     </div>
                     <div class="mb-4">
                         <label class="block text-gray-700 font-semibold mb-2" for="phone">Phone</label>
                         <input class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-brand-green" 
-                               type="tel" id="phone" placeholder="(123) 456-7890">
+                               type="tel" id="phone" name="entry.729117539" placeholder="(123) 456-7890" required>
                     </div>
                     <div class="mb-4">
                         <label class="block text-gray-700 font-semibold mb-2" for="message">Message</label>
                         <textarea class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-brand-green" 
-                                  id="message" rows="4" placeholder="How can we help you?"></textarea>
+                                  id="message" name="entry.2064192277" rows="4" placeholder="How can we help you?" required></textarea>
                     </div>
-                    <button class="w-full bg-brand-green text-white py-3 rounded-lg font-semibold hover:opacity-90 transition duration-300">
+                    <button type="submit" class="w-full bg-brand-green text-white py-3 rounded-lg font-semibold hover:opacity-90 transition duration-300">
                         Send Message
                     </button>
                 </form>
