--- a/index.html
+++ b/index.html
@@ -18,10 +18,18 @@
             }
         }
     </script>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@600;700&family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <style>
         html {
             scroll-behavior: smooth;
         }
+        /* Apply fonts */
+        body { font-family: 'Roboto', system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial; }
+        h1,h2,h3,h4,h5,h6 { font-family: 'Raleway', 'Roboto', system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial; }
+        /* Fallback responsive 16:9 aspect ratio for video if tailwind aspect-ratio not present */
+        .aspect-w-16 { position: relative; width: 100%; }
+        .aspect-w-16::before { content: ""; display: block; padding-top: 56.25%; }
+        .aspect-w-16 > * { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
     </style>
 </head>
 <body class="bg-gray-50">
@@ -56,6 +64,18 @@
                         Schedule a Free Consultation
                     </a>
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Video Section -->
+    <section class="py-12 bg-white">
+        <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8">
+            <div class="aspect-w-16 aspect-h-9">
+                <video controls class="w-full h-full rounded-lg shadow-lg">
+                    <source src="videos/mortgage.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
             </div>
         </div>
     </section>
