Fix alignment about me heading

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="grid md:grid-cols-2 gap-12 items-center">
                 <div>
-                    <h2 class="text-3xl font-bold text-gray-800 mb-6">About Me</h2>
+                    <h2 class="text-3xl font-bold text-gray-800 mb-6 text-center md:text-left">About Me</h2>
                     <p class="text-gray-600 mb-4">
                         Hi, I'm DeAndre' Coulter, a Mortgage Loan Officer with Home Right Lending. I grew up in West Seattle and now live in the Covington/Maple Valley area with my wife and our two daughters. After a successful career in tech sales at Zillow, Shopify, and ADP, I decided to pursue my true passion: helping families achieve homeownership and financial stability through real estate.
                     </p>
